// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph matches snapshot when is aligned to the left 1`] = `
.emotion-0 {
  color: #172b4e;
  line-height: calc(1.2 * 1.5);
}

<p
  className="emotion-0"
>
  Some content
</p>
`;

exports[`Paragraph matches snapshot when is aligned to the right 1`] = `
.emotion-0 {
  color: #172b4e;
  line-height: calc(1.2 * 1.5);
  text-align: right;
}

<p
  className="emotion-0"
>
  Some content
</p>
`;

exports[`Paragraph matches snapshot when is center aligned 1`] = `
.emotion-0 {
  color: #172b4e;
  line-height: calc(1.2 * 1.5);
  text-align: center;
}

<p
  className="emotion-0"
>
  Some content
</p>
`;
